<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleCentered="true"
            android:background="@null" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:layout_height="240dp"
                android:layout_width="240dp"
                android:padding="8dp"
                android:src="@drawable/crash_icon"
                app:tint="?colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?colorOnSurface"
                android:gravity="center"
                android:layout_marginVertical="4dp"
                android:text="@string/crash_oops"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?colorOutline"
                android:gravity="center"
                android:paddingHorizontal="4dp"
                android:layout_marginVertical="2dp"
				android:layout_marginHorizontal="16dp"
                android:text="@string/crash_description"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/report_button"
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="4dp"
                android:layout_height="wrap_content"
                android:text="@string/crash_send_report" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/export_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3Expressive.Button.TonalButton"
                    android:text="@string/crash_export_logs" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/restart_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
                    style="@style/Widget.Material3Expressive.Button.TonalButton"
                    android:text="@string/crash_restart" />

            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
