<com.xapps.media.xmusic.widget.SongDetailsSheet
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/songDetailsSheetRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/songDetailsSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@drawable/rounded_corners_bottom_sheet"
        app:layout_behavior="com.xapps.media.xmusic.models.CustomBottomSheetBehavior"
        app:layoutDescription="@xml/song_details_scene">

        <com.appbroker.roundedimageview.RoundedImageView
            android:id="@+id/songArtwork"
            android:elevation="1dp"
            android:layout_width="72dp"
            android:layout_height="72dp"
            app:srcCompat="@drawable/placeholder"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.xapps.media.xmusic.widget.StatusBarScrimView
            android:id="@+id/top_scrim"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:elevation="2dp"
            android:alpha="0"
            app:layout_constraintTop_toTopOf="@id/songArtwork"
            app:layout_constraintStart_toStartOf="@id/songArtwork"
            app:layout_constraintEnd_toEndOf="@id/songArtwork"
            app:scrimColor="?colorSurfaceContainer" />

        <com.xapps.media.xmusic.widget.StatusBarScrimView
            android:id="@+id/bottom_scrim"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:elevation="2dp"
            android:alpha="0"
            android:scaleY="-1"
            app:layout_constraintBottom_toBottomOf="@id/songArtwork"
            app:layout_constraintStart_toStartOf="@id/songArtwork"
            app:layout_constraintEnd_toEndOf="@id/songArtwork"
            app:scrimColor="?colorSurfaceContainer" />

        <LinearLayout
            android:id="@+id/small_titles_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            app:layout_constraintTop_toTopOf="@id/songArtwork"
            app:layout_constraintBottom_toBottomOf="@+id/songArtwork"
            app:layout_constraintStart_toEndOf="@id/songArtwork"
            android:gravity="center_vertical"
            android:orientation="vertical">
            
            <com.xapps.media.xmusic.widget.MarqueeTextView
                android:id="@+id/songTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="The Pretender"
                android:textColor="?colorPrimary" />

            <com.xapps.media.xmusic.widget.MarqueeTextView
                android:id="@+id/songArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Foo Fighters"
                android:textColor="?colorOutline" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/collapsedContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingHorizontal="12dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/songArtwork"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/item_add_queue"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="12dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/rv_ripple_top_inverse"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="24dp"
                    android:layout_width="24dp"
                    app:tint="?colorOnSurface"
                    app:srcCompat="@drawable/ic_add_box" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="?colorOnSurface"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/details_add_to_queue" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_add_playlist"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:background="@drawable/rv_ripple_inverse"
                android:padding="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="24dp"
                    android:layout_width="24dp"
                    app:tint="?colorOnSurface"
                    app:srcCompat="@drawable/ic_playlist_add" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="?colorOnSurface"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/details_add_to_playlist" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_edit_song"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:background="@drawable/rv_ripple_inverse"
                android:padding="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="24dp"
                    android:layout_width="24dp"
                    app:tint="?colorOnSurface"
                    app:srcCompat="@drawable/ic_file_edit" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="?colorOnSurface"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/details_edit_tags" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_blacklist"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:background="@drawable/rv_ripple_inverse"
                android:padding="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="24dp"
                    android:layout_width="24dp"
                    app:tint="?colorOnSurface"
                    app:srcCompat="@drawable/ic_folder_cancel" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="?colorOnSurface"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/details_blacklist" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_delete"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginBottom="2dp"
                android:background="@drawable/rv_ripple_bottom_inverse"
                android:padding="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="24dp"
                    android:layout_width="24dp"
                    app:tint="?colorError"
                    app:srcCompat="@drawable/ic_delete" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="?colorError"
                    android:layout_marginLeft="12dp"
                    android:layout_weight="1"
                    android:text="@string/details_delete" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/expandedContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0"
            app:layout_constraintTop_toBottomOf="@id/songArtwork"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>


</com.xapps.media.xmusic.widget.SongDetailsSheet>
